--- a/.cargo/about.hbs
+++ b/.cargo/about.hbs
@@ -1,5 +1,5 @@
 ╔════════════════════════════════╗ 
-║      Third Party Licenses      ║
+║       Compiled Licenses        ║
 ║  (generated with cargo-about)  ║
 ╚════════════════════════════════╝
 
@@ -18,6 +18,7 @@ Used by
 {{#each used_by}}
 - {{crate.name}} {{crate.version}}: {{#if crate.repository}} {{crate.repository}} {{else}} https://lib.rs/{{crate.name}} {{/if}}
 {{/each}}
+
 License
 ----------------------------------
 {{text}}
